[project]
name = "nx-webcam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "starlette>=0.47.3",
    "uvicorn[standard]>=0.35.0",
]
